# neograaf

./: CMakeLists.txt  README.md  conanfile.txt  license
packaging/: graaf.pc.in
perf/: CMakeLists.txt  add_edge_benchmark.cpp  add_vertex_benchmark.cpp  bron_kerbosch_benchmark.cpp
src/: CMakeLists.txt  edge.cpp  graph.cpp  graph_partition.cpp  tree.cpp  types.cpp
src/algorithm/: dfs_cycle_detection.cpp  graph_utils.cpp
src/algorithm/clique_detection/: bron_kerbosch.cpp
src/algorithm/coloring/: greedy_graph_coloring.cpp  welsh_powell.cpp
src/algorithm/graph_traversal/: breadth_first_search.cpp  common.cpp  depth_first_search.cpp
src/algorithm/minimum_spanning_tree/: kruskal.cpp  prim.cpp
src/algorithm/shortest_path/: a_star.cpp  bellman_ford.cpp  bfs_shortest_path.cpp  common.cpp  dijkstra_shortest_path.cpp  dijkstra_shortest_paths.cpp  floyd_warshall.cpp
src/algorithm/strongly_connected_components/: common.cpp  kosaraju.cpp  tarjan.cpp
src/algorithm/topological_sorting/: dfs_topological_sort.cpp
src/io/: dot.cpp
src/properties/: vertex_properties.cpp
tests/: CMakeLists.txt  directed_graph_test.cpp  graph_test.cpp  graph_traits_test.cpp  tree_test.cpp  undirected_graph_test.cpp  weighted_graph_test.cpp
tests/algorithm/: dfs_cycle_detection_test.cpp  dfs_topological_sorting_test.cpp
tests/algorithm/clique_detection/: bron_kerbosch_test.cpp
tests/algorithm/coloring/: greedy_coloring_test.cpp  welsh_powell_test.cpp
tests/algorithm/cycle_detection/: dfs_cycle_detection_test.cpp
tests/algorithm/graph_traversal/: breadth_first_search_test.cpp  depth_first_search_test.cpp
tests/algorithm/minimum_spanning_tree/: kruskal_test.cpp  prim_test.cpp
tests/algorithm/shortest_path/: a_star_test.cpp  bellman_ford_test.cpp  bfs_shortest_path_test.cpp  dijkstra_shortest_path_test.cpp  dijkstra_shortest_paths_test.cpp  floyd_warshall_test.cpp
tests/algorithm/strongly_connected_components/: kosaraju_test.cpp  tarjan_test.cpp
tests/algorithm/topological_sorting/: dfs_topological_sorting_test.cpp
tests/io/: dot_test.cpp
tests/properties/: vertex_properties_test.cpp
tests/utils/: fixtures.cpp  scenarios.cpp  utils.cpp
